// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fieldset Basic renders correctly 1`] = `
<div>
  <fieldset
    aria-describedby="fieldset-:r0:-hint"
    class="css-1ceugzq-FieldsetContainer"
    id="fieldset-:r0:"
  >
    <legend
      class="css-13ok6tm-boxStyles"
    >
      What is your name?
    </legend>
    <span
      class="css-1w1ksgd-boxStyles-FieldsetHint"
      id="fieldset-:r0:-hint"
    >
      We will only use this to respond to your requests
    </span>
    <div
      class="css-1dnalsd-FieldsetContent"
    >
      <div
        class="css-h0krvw-boxStyles"
      >
        <div
          class="css-1904cz9-boxStyles-FieldContainer"
        >
          <label
            class="css-shvtw2-boxStyles"
            for="field-:r1:"
          >
            <span
              class="css-cnptgw-boxStyles"
            >
              First name
            </span>
          </label>
          <input
            aria-invalid="false"
            aria-required="true"
            class="css-sgg6k9"
            id="field-:r1:"
            type="text"
          />
        </div>
        <div
          class="css-1904cz9-boxStyles-FieldContainer"
        >
          <label
            class="css-shvtw2-boxStyles"
            for="field-:r2:"
          >
            <span
              class="css-cnptgw-boxStyles"
            >
              Last name
            </span>
          </label>
          <input
            aria-invalid="false"
            aria-required="true"
            class="css-sgg6k9"
            id="field-:r2:"
            type="text"
          />
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Fieldset Legend as page heading renders correctly 1`] = `
<div>
  <fieldset
    aria-describedby="fieldset-:r9:-hint"
    class="css-1ceugzq-FieldsetContainer"
    id="fieldset-:r9:"
  >
    <legend>
      <h1
        class="css-1sak4l9-boxStyles"
      >
        What is your name?
      </h1>
    </legend>
    <div
      class="css-uw4i6o-FieldsetHint"
      id="fieldset-:r9:-hint"
    >
      <span
        class="css-1sb0cft-boxStyles"
      >
        We will only use this to respond to your requests
      </span>
    </div>
    <div
      class="css-1dnalsd-FieldsetContent"
    >
      <div
        class="css-h0krvw-boxStyles"
      >
        <div
          class="css-1904cz9-boxStyles-FieldContainer"
        >
          <label
            class="css-shvtw2-boxStyles"
            for="field-:ra:"
          >
            <span
              class="css-cnptgw-boxStyles"
            >
              First name
            </span>
          </label>
          <input
            aria-invalid="false"
            aria-required="true"
            class="css-sgg6k9"
            id="field-:ra:"
            type="text"
          />
        </div>
        <div
          class="css-1904cz9-boxStyles-FieldContainer"
        >
          <label
            class="css-shvtw2-boxStyles"
            for="field-:rb:"
          >
            <span
              class="css-cnptgw-boxStyles"
            >
              Last name
            </span>
          </label>
          <input
            aria-invalid="false"
            aria-required="true"
            class="css-sgg6k9"
            id="field-:rb:"
            type="text"
          />
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;
